@@ -79,9 +79,28 @@ protected:
     this->set_output_dims(this->get_input_dims());
   }
   void fp_setup_outputs(El::Int mini_batch_size) override {
+#ifdef LBANN_HAS_DISTCONV
+    // Copy activations when distconv is enabled
+
+    if (this->distconv_enabled()) {
+      data_type_layer<TensorDataType>::fp_setup_outputs(mini_batch_size);
+
+      return;
+    }
+#endif // LBANN_HAS_DISTCONV
     El::LockedView(this->get_activations(), this->get_prev_activations());
   }
   void bp_setup_gradient_wrt_inputs(El::Int mini_batch_size) override {
+#ifdef LBANN_HAS_DISTCONV
+    // Copy gradients wrt inputs when distconv is enabled
+
+    if (this->distconv_enabled()) {
+      data_type_layer<TensorDataType>::bp_setup_gradient_wrt_inputs(
+        mini_batch_size);
+
+      return;
+    }
+#endif // LBANN_HAS_DISTCONV
     El::LockedView(this->get_error_signals(), this->get_prev_error_signals());
   }
   void fp_compute() override {}
